gateway/virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/platform-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/platform-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    rewrite:
      uri: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
